WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80425
[Qt] REGRESSION(
r109575
) Broke tap-to-zoom gesture
https://bugs.webkit.org/show_bug.cgi?id=80425
Summary
[Qt] REGRESSION(r109575) Broke tap-to-zoom gesture
Allan Sandfeld Jensen
Reported
2012-03-06 08:19:05 PST
Tapping on any page such as google.com would previously cause the view to zoom in. This no longer happens after the patch in
r109575
.
Attachments
Patch
(2.05 KB, patch)
2012-03-06 18:05 PST
,
Dinu Jacob
hausmann
: review+
hausmann
: commit-queue-
Details
Formatted Diff
Diff
Updated Patch
(2.13 KB, patch)
2012-03-07 05:28 PST
,
Dinu Jacob
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dinu Jacob
Comment 1
2012-03-06 18:04:00 PST
Need to set the startScreenPos for the mock touch point.
Dinu Jacob
Comment 2
2012-03-06 18:05:30 PST
Created
attachment 130504
[details]
Patch
Simon Hausmann
Comment 3
2012-03-06 22:51:54 PST
Comment on
attachment 130504
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=130504&action=review
> Tools/MiniBrowser/qt/MiniBrowserApplication.cpp:196 > + touchPoint.setStartScenePos(m_startScreenPos);
You're right, the double tap recognizer uses the start screen pos, but there's a typo in this line where the start_screen_ pos is set on the start_Scene_ pos property. Please fix before landing :)
Dinu Jacob
Comment 4
2012-03-07 05:22:16 PST
(In reply to
comment #3
)
> (From update of
attachment 130504
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=130504&action=review
> > > Tools/MiniBrowser/qt/MiniBrowserApplication.cpp:196 > > + touchPoint.setStartScenePos(m_startScreenPos); > > You're right, the double tap recognizer uses the start screen pos, but there's a typo in this line where the start_screen_ pos is set on the start_Scene_ pos property. Please fix before landing :)
That was intentional. As canvas translates the touch events we need to set the screen position as the scene position. I can add a comment there.
Dinu Jacob
Comment 5
2012-03-07 05:28:59 PST
Created
attachment 130605
[details]
Updated Patch
WebKit Review Bot
Comment 6
2012-03-07 08:56:39 PST
Comment on
attachment 130605
[details]
Updated Patch Clearing flags on attachment: 130605 Committed
r110058
: <
http://trac.webkit.org/changeset/110058
>
WebKit Review Bot
Comment 7
2012-03-07 08:56:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug