[Qt] REGRESSION(r109575) Broke tap-to-zoom gesture https://bugs.webkit.org/show_bug.cgi?id=80425

Patch by Dinu Jacob <dinu.jacob@nokia.com> on 2012-03-07
Reviewed by Simon Hausmann.

Set startScreenPos in mock touch point

* MiniBrowser/qt/MiniBrowserApplication.cpp:
(MiniBrowserApplication::notify):
* MiniBrowser/qt/MiniBrowserApplication.h:
(MiniBrowserApplication):

Canonical link: https://commits.webkit.org/97675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110058 268f45cc-cd09-0410-ab3c-d52691b4dbfc